src/parse/snapshots/dilaria__parse__test__block__empty.snap
---
source: src/parse/test.rs
expression: ast
---
Block {
    stmts: [],
    span: Span(
        0..0,
    ),
}
